# FileHandleProtei

./: CMakeLists.txt  FileHandler  FileHandler.cpp  FileHandler.h  README.md  functions  functions.cpp  main  main.cpp
tests/: test1.txt  test2.txt
